--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,10 @@ Patches and Suggestions
 - Dave Challis (https://github.com/davechallis)
 - Florian Bruhin (https://github.com/The-Compiler)
 - Brett Randall (https://github.com/javabrett)
+
+
+Vercel Deployment Modify
+````````````````````````
+
+- Sunset (https://github.com/lwd-temp)
+
